salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/Accounting_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Accounting Sync Log</label>
    <nameField>
        <displayFormat>ASL-{000000}</displayFormat>
        <label>Sync Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>