salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Text</type>
    <length>80</length>
</CustomField>