salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Expense Report</label>
    <type>Lookup</type>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Accounting Sync Logs</relationshipLabel>
    <relationshipName>Accounting_Sync_Logs</relationshipName>
</CustomField>