salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>