salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>HTTP Status Code</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>