salesforce-port/force-app/main/default/objects/Accounting_Sync_Log__c/fields/Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>Synced_Date__c</fullName>
    <label>Synced Date</label>
    <type>DateTime</type>
</CustomField>